[project]
name = "ceda-c7listeners"
version = "0.1.0"
description = "CMIP7 Publication Producer/Listener for creating Aggregations and New Citations (PLANC)"
authors = [
    {name = "Daniel Westwood",email = "daniel.westwood@stfc.ac.uk"}
]
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = [
    "confluent-kafka (>=2.14.0,<3.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "click (>=8.3.2,<9.0.0)",
    "esgf-core-utils (>=1.0.7,<2.0.0)",
    "esgcet (>=5.3.6,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "isort (>=8.0.1,<9.0.0)"
]

[project.scripts]
public_listen = "ceda_c7listeners.cli:main"